Update beta diversity table

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -28,14 +28,16 @@ _distances_, as this is a mathematical concept whose definition is not satisfied
 by certain ecological measure, such as the Bray-Curtis index. Therefore, the terms
 dissimilarity and beta diversity are preferred.
 
-| Method description         | Assay type          | Beta diversity metric |
-|:--------------------------:|:-------------------:|:---------------------:|
-| Quantitative profiling     | Absolute counts     | Bray-Curtis           | 
-| Relative profiling         | Relative abundances | Bray-Curtis           |
-| Aitchison distance         | clr                 | Euclidean             |
-| Robust Aitchison distance  | rclr                | Euclidean             |
-| Present/Absence similarity | Absolute counts     | Jaccard               |
-| Phylogenetic distance      | Absolute counts     | Unifrac               |
+| Method description          | Assay type          | Beta diversity metric |
+|:---------------------------:|:-------------------:|:---------------------:|
+| Quantitative profiling      | Absolute counts     | Bray-Curtis           | 
+| Relative profiling          | Relative abundances | Bray-Curtis           |
+| Aitchison distance          | Absolute counts     | Aitchison             |
+| Aitchison distance          | clr                 | Euclidean             |
+| Robust Aitchison distance   | rclr                | Euclidean             |
+| Presence/Absence similarity | Relative abundances | Jaccard               |
+| Presence/Absence similarity | Absolute counts     | Jaccard               |
+| Phylogenetic distance       | Rarefied counts     | Unifrac               |
 
 In practice, beta diversity is usually represented as a `dist` object, a
 triangular matrix where the distance between each pair of samples is encoded by
@@ -136,7 +138,7 @@ p <- p + labs(x = paste("PCoA 1 (", round(100 * rel_eig[[1]], 1), "%", ")", sep 
 p
 ```
 
-A few combinations of beta diversity metrics and assay types are tipically
+A few combinations of beta diversity metrics and assay types are typically
 used. For instance, Bray-Curtis dissimilarity and Euclidean distance are often
 applied to the relative abundance and the clr assays, respectively. Besides
 **beta diversity metric** and **assay type**, the **PCoA algorithm** is also a
