Add plotRDA function to beta diversity chapter (#343)
* Add link to benchmarking and minor polish

* Simplify section on supervised ordination

* Add clarifications to DAA with confounding

* Fix beta diversity bug

* Minor change

* Add exercise on DAA method comparison

* Minor fix

* Minor fix

* Streamline RDA section with new plotRDA function

* Fix rmd table in beta diversity chapter

* Fix miaTime missing error

* Fix miaTime missing error

* Add dendextend to DESCRIPTION

* Add other missing deps

* Fix dep names

* Add multiassay analyses deps

* Remove reticulate from deps

* Add deps for extra materials

* Improve PCoA example

* Fix deployment

* Implement pseudocount = TRUE and minor fixes

* Update 30_differential_abundance (#348)

* Replace pseudocount 1 with TRUE throughout book

* Add table of typical beta div combinations

* Fix pseudocount bug

* Update beta diversity table

---------

Co-authored-by: Elina297 <125908303+Elina297@users.noreply.github.com>

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -102,7 +102,7 @@ bacterium X is present, is the concentration of metabolite Y lower or higher"?
 # Agglomerate microbiome data at family level
 mae[[1]] <- mergeFeaturesByPrevalence(mae[[1]], rank = "Family")
 # Does log10 transform for microbiome data
-mae[[1]] <- transformAssay(mae[[1]], method = "log10", pseudocount = 1)
+mae[[1]] <- transformAssay(mae[[1]], method = "log10", pseudocount = TRUE)
 
 # Give unique names so that we do not have problems when we are creating a plot
 rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
@@ -193,8 +193,8 @@ mae[[2]] <- transformAssay(mae[[2]], assay.type = "nmr",
 
 # Transforming biomarker data with z-transform
 mae[[3]] <- transformAssay(mae[[3]], assay.type = "signals",
-                            MARGIN = "features",
-                            method = "z", pseudocount = 1)
+                           MARGIN = "features",
+                           method = "z", pseudocount = 1)
 
 # Removing assays no longer needed
 assay(mae[[1]], "counts") <- NULL
