--- a/book.bib
+++ b/book.bib
@@ -1468,7 +1468,7 @@ eprint = {1208.3145},
 pages = {2--6},
 title = {{Metric distances derived from cosine similarity and Pearson and Spearman correlations}},
 url = {http://arxiv.org/abs/1208.3145},
-journal={{arXiv preprint}}
+journal={{arXiv preprint}},
 volume = {2},
 year = {2012}
 }
