--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -231,9 +231,7 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 3. List the information on samples available in colData with `names`.
 4. Visualize the colData with `View` and briefly look at the information stored
    in the different columns.
-3. Get the abundances of all features for a specific sample, such as `ID34`. You
-   can access sample-specific abundances with `getAbundaceSample`, specifying the
-   desired `sample_id` and `assay.type`.
+3. Get the abundances of all features for a specific sample, such as `ID34`, for an _assay_ of your choice.
 
 
 ### Feature information
@@ -245,8 +243,7 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 4. Visualize the rowData with `View` and briefly look at the information stored
    in the different columns.
 5. Get the abundances for a specific feature, such as `OTU1810`, in all the
-   samples. You can access feature-specific abundances with `getAbundaceFeature`,
-   specifying the desired `feature_id` and `assay.type`.
+   samples. You can access feature-specific abundances for an _assay_ of your choice.
 6. **Extra**: Create a taxonomy tree based on the taxonomy mappings with
    `addTaxonomyTree` and display its content with `taxonomyTree` and `ggtree`.
 
