--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -2027,19 +2027,31 @@ instance, extracting abundances for a specific taxa in all samples or all taxa
 in one sample.  
 
 ### Abundances of all taxa in specific sample 
+
 ```{r}
-taxa.abund.cc1 <- getAbundanceSample(tse, 
-                                     sample_id = "CC1",
-                                     assay.type = "counts")
+taxa.abund.cc1 <- tse[, "CC1"]
 taxa.abund.cc1[1:10]
 ```
 
-### Abundances of specific taxa in all samples   
+For a selected assay:
 
 ```{r}
-taxa.abundances <- getAbundanceFeature(tse, 
-                                      feature_id = "Phylum:Bacteroidetes",
-                                      assay.type = "counts")
+taxa.abund.cc1 <- assay(tse, assay.type="counts")[, "CC1"]
+taxa.abund.cc1[1:10]
+```
+
+### Abundances of specific feature in all samples   
+
+```{r}
+taxa.abundances <- tse["Phylum:Bacteroidetes",]
+taxa.abundances[1:10]
+```
+
+
+For a selected assay:
+
+```{r}
+taxa.abundances <- assay(tse, assay.type="counts")["Phylum:Bacteroidetes",]
 taxa.abundances[1:10]
 ```
 
