--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -8,6 +8,15 @@ Here you can find assignments on different topics.
    - Interpret results by comparing them to literature. List main findings, so that results can easily be understood by others without advanced knowledge on data analytics.
    - Avoid hard-coding. Use variables which get values in the beginning of the pipeline. That way it is easier for you to modify parameters and reuse the code.
 
+## Basics of R/Bioconductor
+
+Bioconductor training material has been contributed to [Carpentries](https://carpentries.org/). You can check the following lessons for basic background of R and Bioconductor.
+
+ * [Introduction to data analysis with R and Bioconductor](https://carpentries-incubator.github.io/bioc-intro/)
+
+ * [Introduction to the Bioconductor project](https://carpentries-incubator.github.io/bioc-project/)
+
+
 ## Workflows
 
 ### Reproducible reporting with Quarto
