--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -7,6 +7,11 @@ library(rebook)
 chapterPreamble()
 ```
 
+## Slides
+
+[Outreach material](https://microbiome.github.io/outreach/) includes
+slide sets for training events.
+
 
 ## PERMANOVA comparison {#compare-permanova}
 
