Add benchdamic's citations

--- a/book.bib
+++ b/book.bib
@@ -1153,6 +1153,30 @@ year = {2022}
   file = {/Users/henrikeckermann/Zotero/storage/RL7S8KYH/Nearing et al. - 2022 - Microbiome differential abundance methods produce .pdf}
 }
 
+@Article{Calgaro2020,
+    title = {Assessment of statistical methods from single cell, bulk RNA-seq, and metagenomics applied to microbiome data},
+    author = {Matteo Calgaro and Chiara Romualdi and Levi Waldron and Davide Risso and Nicola Vitulo},
+    volume = {21},
+    number = {1},
+    pages = {191},
+    year = {2020},
+    month = {8},
+    journal = {Genome Biology},
+    url = {https://doi.org/10.1186/s13059-020-02104-1}
+}
+  
+@Article{Calgaro2022,
+    title = {benchdamic: benchmarking of differential abundance
+methods for microbiome data},
+    author = {Matteo Calgaro and Chiara Romualdi and Davide Risso and Nicola Vitulo},
+    volume = {39},
+    number = {1},
+    year = {2022},
+    month = {12},
+    journal = {Bioinformatics},
+    url = {https://doi.org/10.1093/bioinformatics/btac778}
+}
+
 @Article{Mandal2015,
   title = {Analysis of Composition of Microbiomes: A Novel Method for Studying Microbial Composition},
   shorttitle = {Analysis of Composition of Microbiomes},
