--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -254,13 +254,14 @@ To better visualize the results and the distribution of the clusters, we can
 plot the histogram of the clusters.
 
 ```{r taxa_clustering_histogram}
-library(ggplot2)
+pak::pak("tidyverse/ggplot2")
+library(tidyverse)
 library(patchwork) # TO arrange several plots as a grid
-plot1 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_euclidean)) +
+plot1 <- ggplot(rowData(tse), aes(x = clusters_euclidean)) +
     geom_bar() +
     labs(title = "CAG size distribution (Euclidean distance)",
          x = "Clusters", y = "Feature count (n)")
-plot2 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_kendall)) +
+plot2 <- ggplot(rowData(tse), aes(x = clusters_kendall)) +
     geom_bar() +
     labs(title = "CAG size distribution (1 - tau)",
          x = "Clusters", y = "Feature count (n)")
