--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -260,9 +260,10 @@ The distribution of calculated library sizes can be visualized as a
 histogram (left), or by sorting the samples by library size (right).
 
 ```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library size distribution."}
-library(ggplot2)
+pak::pak("tidyverse/ggplot2")
+library(tidyverse)
 
-p1 <- ggplot(as.data.frame(colData(tse))) +
+p1 <- ggplot(colData(tse)) +
         geom_histogram(aes(x = sum), color = "black", fill = "gray", bins = 30) +
         labs(x = "Library size", y = "Frequency (n)") + 
         # scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), 
