book render fails

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -2,6 +2,10 @@
 
 # Extra material {#extras}
 
+```{r}
+knitr::opts_chunk$set(eval=FALSE)
+```
+
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
