--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -402,6 +402,8 @@ tse_genus <- transformAssay(tse,
 tse_genus <- addPerSampleDominantFeatures(tse_genus,
                                           assay.type = "relabundance",
                                           name = "dominant_taxa")
+# Overview
+countDominantFeatures(tse_genus, rank = "Genus", digits = 3, name = "dominant_taxa")
 ```
 
 Next, we perform PCoA with Bray-Curtis dissimilarity.
