replace deprecations with new funcs

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -114,7 +114,7 @@ threshold of 10%.
 
 ```{r prep-daa-data}
 # Agglomerate by genus and subset by prevalence
-tse <- subsetByPrevalentTaxa(tse,
+tse <- subsetByPrevalentFeatures(tse,
                              rank = "Genus",
                              prevalence = 10 / 100)
 
