--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -583,7 +583,7 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 1. Import the mia and ALDEx2 packages, load peerj13075 with `data` and store it
    into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentTaxa` by specifying
+   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
 3. Model the counts assay of the TreeSE with `aldex.clr` and store it into the
    variable `x`. As a second argument, provide the grouping variable `Diet`,
@@ -603,7 +603,7 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 1. Import the mia and MicrobiomeStat packages, load peerj13075 with `data` and
    store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentTaxa` by specifying
+   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
 3. Model the counts assay of the TreeSE with `linda` and store the output into
    a variable named `linda_out`. Provide the colData converted into a data.frame
@@ -625,7 +625,7 @@ namely ZicoSeq. We aim to compare the results between these two methods and draw
 1. Import the mia and GUniFrac packages, load peerj13075 with `data` and
    store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentTaxa` by specifying
+   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
 3. Model the counts assay of the TreeSE with `ZicoSeq` as the `feature.dat`
    argument and store the output into a variable named `zicoseq_out`. Provide
