--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
 biblio-style: apalike
-link-citations: no
+link-citations: false
 github-repo: microbiome/OMA
 always_allow_html: yes
 ---
