--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -4412,7 +4412,7 @@ that we specify.
 # Run ANCOM-BC 
 out <- ancombc2(
   data = tse,
-  assay_type = "counts", 
+  assay.type = "counts", 
   tax_level = "genus", 
   fix_formula = "Geographical_location", 
   p_adj_method = "fdr", 
@@ -4613,7 +4613,7 @@ LinDA and ZicoSeq.
 # perform the analysis 
 ancombc_cov <- ancombc2(
   data = tse,
-  assay_type = "counts",
+  assay.type = "counts",
   tax_level = "genus",
   fix_formula = "Geographical_location + Age", 
   p_adj_method = "fdr", 
