--- a/20_beta_diversity.qmd
+++ b/20_beta_diversity.qmd
@@ -184,8 +184,7 @@ between them or select the most suitable one to visualize beta diversity in the
 light of the research question.
 
 ```{r}
-#| fig.cap = "Comparison of MDS and NMDS plots based on the Bray-Curtis or Aitchison distances on the GlobalPattern
-#| dataset."
+#| fig.cap = "Comparison of MDS and NMDS plots based on the Bray-Curtis or Aitchison distances on the GlobalPattern dataset."
 # Load package for multi-panel plotting
 library(patchwork)
 
